# finite-state-machine

./: CMakeLists.txt  fstatem.c  fstatem.h  main.c  testfstatem.c  todo.txt
